# ftime

./: .gitignore  12月8日-現時点でのまとめと、作業再開するための備忘録.md  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README copy.md  README-ja.md  README-zh.md  README.md  SVG_RECORDING_GUIDE.md  TODO.md  ftime-color-preview.html  ftime-list.sh  make-demo.sh
.github/workflows/: ci.yml  release.yml
assets/: ftime-demo.cast
demo/: README.md  render-assets.sh  setup-scene.sh
demo/tapes/: demo_ftime.tape
demo/template/: Cargo.toml  README.md
demo/template/assets/: demo.txt
demo/template/docs/: guide.md
demo/template/tests/: cli.rs
docs/: 12-10_ROADMAP.md  ARCHITECTURE-ja.md  ARCHITECTURE.md  CLI-ja.md  CLI.md  COMMANDS.md  INSTALL.md  MAINTAINING.md  PLATFORM-VERIFY-v1.0.md  PUBLISH-CHECKLIST-ja.md  README-ja.md  README-zh.md  RELEASE-NOTES-v1.0.md  RELEASE-NOTES-v2.0.md  SPEC-ja.md  SPEC-v0.1.md  SPEC-v1.0.md  SPEC-v2.0.md  TESTPLAN-ja.md  TESTPLAN-v0.1.md  TESTPLAN-v1.0.md  TESTPLAN-v2.0.md  USER-GUIDE-customize-ja.md  USER-GUIDE-ja.md  ftime-overview-ja.md
scripts/: build-release-fast.sh  install.ps1  install.sh  uninstall.ps1  uninstall.sh
src/: engine.rs  main.rs  model.rs
src/util/: ignore.rs  mod.rs  time.rs  update.rs
src/view/: icon.rs  json.rs  mod.rs  text.rs  tty.rs
tests/: cli.rs  cli_validation_contract.rs  env_warnings.bats  help_contract.rs  help_version.bats  maintaining_docs.rs  output_contract.rs  powershell_contract.rs  release_docs.rs  uninstall.rs  unknown_option.bats
tests/support/: mod.rs
tools/: demo-basic.sh  demo-dir.sh  demo-pattern.sh  demo-tz.sh  scale-cast.js  set-cast-height.js  svg-poster-shift.js
次の実装計画：1月10日12時21分/: 00_index.md  01_session_scope_and_decisions.md  02_research_findings.md  03_project_current_state.md  04_changes_in_session.md  05_phase3_plan_and_schedule.md  06_open_tasks_and_next_steps.md
