[package]
name = "ftime"
version = "1.0.1"
edition = "2024"
rust-version = "1.92"
authors = ["CLI Tools Team"]
description = "Recent file listing CLI with time buckets"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tsutomu-n/ftime"
homepage = "https://github.com/tsutomu-n/ftime"
exclude = [
    ".ai_memory/**",
    ".serena/**",
    "次回/**",
    "次の実装計画：*/**",
    "Cargo.toml.orig",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
chrono = { version = "0.4", features = ["clock"] }
is-terminal = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json"]
icons = []
json = ["serde", "serde_json"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.8"
filetime = "0.2"
serde_json = "1.0"
