[package]
name = "ftime"
version = "1.0.3"
edition = "2024"
rust-version = "1.92"
authors = ["CLI Tools Team"]
description = "Read-only CLI for browsing recently changed files in a folder"
license = "MIT"
readme = "README.md"
repository = "https://github.com/tsutomu-n/ftime"
homepage = "https://github.com/tsutomu-n/ftime"
keywords = ["cli", "filesystem", "mtime", "jsonl", "productivity"]
categories = ["command-line-utilities"]
exclude = [
    ".ai_memory/**",
    ".serena/**",
    "次回/**",
    "次の実装計画：*/**",
    "Cargo.toml.orig",
    "AGENTS.md",
    "assets/demo_ftime.gif",
    "assets/demo_ftime.mp4",
    "assets/social-preview.png",
    "docs/12-10_ROADMAP.md",
    "docs/ARCHITECTURE.md",
    "docs/ARCHITECTURE-ja.md",
    "docs/PLATFORM-VERIFY-v1.0.md",
    "docs/PUBLISH-CHECKLIST-ja.md",
    "docs/RELEASE-NOTES-*",
    "docs/SPEC-*",
    "docs/TESTPLAN-*",
    "scripts/build-release-fast.sh",
]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "3.0"
chrono = { version = "0.4", features = ["clock"] }
is-terminal = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
default = ["json"]
icons = []
json = ["serde", "serde_json"]

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
tempfile = "3.24"
filetime = "0.2"
serde_json = "1.0"
